// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterPanel > should match snapshot (database without dataset) 1`] = `
"<div class=\\"filter-panel\\">
  <div class=\\"el-select-mock filter-select\\" placeholder=\\"Add filter\\" size=\\"large\\">
    <div class=\\"el-option-mock\\" label=\\"Select FDR level\\" value=\\"fdrLevel\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select group\\" value=\\"group\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select project\\" value=\\"project\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select submitter\\" value=\\"submitter\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select dataset\\" value=\\"datasetIds\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Search molecule\\" value=\\"compoundName\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Search by m/z\\" value=\\"mz\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Show/hide off-sample annotations\\" value=\\"offSample\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select polarity\\" value=\\"polarity\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select adduct\\" value=\\"adduct\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select organism\\" value=\\"organism\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select organism part\\" value=\\"organismPart\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select organism condition\\" value=\\"condition\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select sample growth conditions\\" value=\\"growthConditions\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select analyzer\\" value=\\"analyzerType\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select ionisation source\\" value=\\"ionisationSource\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select MALDI matrix\\" value=\\"maldiMatrix\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Set minimum MSM score\\" value=\\"minMSM\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Search anything\\" value=\\"simpleQuery\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select data type\\" value=\\"metadataType\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select class\\" value=\\"molClass\\"></div>
  </div>
  <div class=\\"tf-outer border-gray-300 border border-solid text-sm pr-3\\" data-test-key=\\"database\\" filter-key=\\"database\\" options=\\"\\">
    <div class=\\"tf-name bg-gray-100 text-gray-700 tracking-tight px-3 border-0 border-r border-solid border-gray-300\\">
      <!-- If you want to provide a default content for the \\"name\\" slot --> Database
      <!--v-if-->
    </div>
    <div class=\\"el-popover-mock tf-value-container pl-3\\" trigger=\\"click\\" placement=\\"bottom\\" width=\\"300\\">
      <div class=\\"el-select-mock w-full\\" placeholder=\\"Start typing name\\" clearable=\\"false\\" filterable=\\"\\" filter-method=\\"function filterOptions(query) {
      if (query === previousQuery.value || dbsByGroup.value === null) {
        return;
      }
      const hideArchived = !hasDatasetFilter.value &amp;&amp; query.length === 0;
      try {
        const groupOptions = [];
        const sourceDatabases = Array.isArray(props.fixedOptions) &amp;&amp; props.fixedOptions.length > 0 ? __vite_ssr_import_6__.getDatabasesByGroup(props.fixedOptions) : dbsByGroup.value;
        const queryRegex = new RegExp(query, &quot;i&quot;);
        for (const group of sourceDatabases) {
          const localOptions = [];
          for (const db of group.molecularDatabases) {
            const id = db.id.toString();
            if (!(id in options.value)) {
              options.value[id] = mapDBtoOption(db);
            }
            const option = options.value[id];
            if (hideArchived &amp;&amp; db.archived &amp;&amp; props.value !== option.value) {
              continue;
            }
            if (queryRegex.test(option.label)) {
              localOptions.push(option);
            }
          }
          if (localOptions.length) {
            groupOptions.push({
              label: group.shortName,
              options: __vite_ssr_import_2__.sortBy(localOptions, &quot;label&quot;)
            });
          }
        }
        groups.value = groupOptions;
        previousQuery.value = query;
      } catch (err) {
        groups.value = [];
        previousQuery.value = null;
        throw err;
      }
    }\\" no-data-text=\\"No matches\\" no-match-text=\\"No matches\\" reserve-keyword=\\"\\">
        <div class=\\"el-option-group-mock\\" label=\\"METASPACE\\">
          <div class=\\"el-option-mock flex\\" label=\\"foo - v1\\" value=\\"1\\"><span class=\\"truncate\\" title=\\"foo - v1\\">foo - v1</span>
            <!--v-if-->
          </div>
        </div>
        <div class=\\"el-option-group-mock\\" label=\\"test\\">
          <div class=\\"el-option-mock flex\\" label=\\"bar - v1\\" value=\\"2\\"><span class=\\"truncate\\" title=\\"bar - v1\\">bar - v1</span>
            <!--v-if-->
          </div>
        </div>
      </div>
      <p class=\\"leading-5 text-sm m-0 mt-3 text-gray-700\\">
      <div class=\\"el-icon-mock text-gray-600 mr-1\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
          <path fill=\\"currentColor\\" d=\\"M512 64a448 448 0 1 1 0 896.064A448 448 0 0 1 512 64zm67.2 275.072c33.28 0 60.288-23.104 60.288-57.344s-27.072-57.344-60.288-57.344c-33.28 0-60.16 23.104-60.16 57.344s26.88 57.344 60.16 57.344zM590.912 699.2c0-6.848 2.368-24.64 1.024-34.752l-52.608 60.544c-10.88 11.456-24.512 19.392-30.912 17.28a12.992 12.992 0 0 1-8.256-14.72l87.68-276.992c7.168-35.136-12.544-67.2-54.336-71.296-44.096 0-108.992 44.736-148.48 101.504 0 6.784-1.28 23.68.064 33.792l52.544-60.608c10.88-11.328 23.552-19.328 29.952-17.152a12.8 12.8 0 0 1 7.808 16.128L388.48 728.576c-10.048 32.256 8.96 63.872 55.04 71.04 67.84 0 107.904-43.648 147.456-100.416z\\"></path>
        </svg>
        <!---->
      </div> Search to see archived versions </p>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`FilterPanel > should match snapshot (no filters) 1`] = `
"<div class=\\"filter-panel\\">
  <div class=\\"el-select-mock filter-select\\" placeholder=\\"Add filter\\" size=\\"large\\">
    <div class=\\"el-option-mock\\" label=\\"Select database\\" value=\\"database\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select FDR level\\" value=\\"fdrLevel\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select group\\" value=\\"group\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select project\\" value=\\"project\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select submitter\\" value=\\"submitter\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select dataset\\" value=\\"datasetIds\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Search molecule\\" value=\\"compoundName\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Search by m/z\\" value=\\"mz\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Show/hide off-sample annotations\\" value=\\"offSample\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select polarity\\" value=\\"polarity\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select adduct\\" value=\\"adduct\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select organism\\" value=\\"organism\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select organism part\\" value=\\"organismPart\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select organism condition\\" value=\\"condition\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select sample growth conditions\\" value=\\"growthConditions\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select analyzer\\" value=\\"analyzerType\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select ionisation source\\" value=\\"ionisationSource\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select MALDI matrix\\" value=\\"maldiMatrix\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Set minimum MSM score\\" value=\\"minMSM\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Search anything\\" value=\\"simpleQuery\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select data type\\" value=\\"metadataType\\"></div>
    <div class=\\"el-option-mock\\" label=\\"Select class\\" value=\\"molClass\\"></div>
  </div>
</div>"
`;
